--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,72 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+@import "compass/utilities/general/clearfix";
+
+/* Social Icons Config */
+$SocialIconSize: 64px;
+
+/* Animation Time */
+$AnimationTime: .2s;
+
+/* General Colors */
+$White: rgb(255,255,255);
+
+/* Social Site Colors */
+$Behance: rgb(23,105,255);
+$Codepen: rgb(0,0,0);
+$Facebook: rgb(59,89,152);
+$GooglePlus: rgb(221,75,57);
+$LinkedIn: rgb(29,135,190);
+$Mail: rgb(226,78,67);
+$Pinterest: rgb(204,34,41);
+$Twitter: rgb(85,172,238);
+$YouTube: rgb(229,44,40);
+
+body { 
+  background: rgb(40,40,40); }
+
+.socialIcon {
+  height: $SocialIconSize;
+  width: $SocialIconSize; }
+
+.wrapper {
+  text-align: left; }
+
+.socialLinks
+{
+  @include clearfix();
+  display: inline-block;
+  margin: 80px 0 0 0;
+  a {
+    display: block;
+    background: transparent;
+    border: 1px solid $White;
+    float: left;
+    height: $SocialIconSize*1.6;
+    margin: 15px;
+    position: relative;
+    @include transition(background $AnimationTime/2 linear, border $AnimationTime/2 linear);
+    width: $SocialIconSize*1.6;
+    .socialIcon {
+      left: 50%;
+      margin: (-$SocialIconSize/2) 0 0 (-$SocialIconSize/2);
+      position: absolute;
+      top: 50%; }
+  }
+  .googleplus:hover {
+    background: $GooglePlus;
+    border-color: $GooglePlus; }
+  .linkedin:hover {
+    background: $LinkedIn;
+    border-color: $LinkedIn; }
+  .mail:hover {
+    background: $Mail;
+    border-color: $Mail; }
+  .twitter:hover {
+    background: $Twitter;
+    border-color: $Twitter; }
+}
+
+
 
 body {
   padding:50px;
@@ -6,6 +74,61 @@ body {
   color:#777;
   font-weight:300;
 }
+
+.contact-list,
+.social-media-list {
+  list-style: none;
+  margin-left: 0; }
+
+/**
+ * Icons
+ */
+.icon > svg {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  vertical-align: middle; }
+  .icon > svg path {
+    fill: #828282; }
+
+.site-nav {
+  font-size: 15px;
+  color: #828282;
+  margin-left: -15px;
+  float: right;
+  line-height: 56px; }
+  .site-nav .menu-icon {
+    display: none; }
+  .site-nav .page-link {
+    color: #111;
+    line-height: 1.5; }
+    .site-nav .page-link:not(:first-child) {
+      margin-left: 20px; }
+  @media screen and (max-width: 600px) {
+    .site-nav {
+}
+      .site-nav .menu-icon {
+        display: block;
+        float: right;
+        width: 36px;
+        height: 26px;
+        line-height: 0;
+        padding-top: 10px;
+        text-align: center; }
+        .site-nav .menu-icon > svg {
+          width: 18px;
+          height: 15px; }
+          .site-nav .menu-icon > svg path {
+            fill: #424242; }
+      .site-nav .trigger {
+        clear: both;
+        display: none; }
+      .site-nav:hover .trigger {
+        display: block;
+        padding-bottom: 5px; }
+      .site-nav .page-link {
+        display: block;
+        padding: 5px 10px; } }
 
 h1, h2, h3, h4, h5, h6 {
   color:#222;
