--- a/spring-2015-msan622/final/finalStyles.css
+++ b/spring-2015-msan622/final/finalStyles.css
@@ -1,4 +1,5 @@
 #writeup {
+  margin-top: 10px;
     width: 100%;
 }
 
@@ -7,11 +8,6 @@
     float: left;
     padding: 5px;
     margin-right: 15px;
-}
-
-#plot {
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .axis text {
@@ -45,11 +41,29 @@
 }
 
 #listanchor {
-  position: absolute;
-  top: 470px;
-  left: 500px;
+  position: relative;
+/*  top: 470px;
+  left: 500px;*/
 }
 
+#plots {
+    width: 1000px;
+    margin: 0 auto;
+    float: left;
+    height: 600px;
+}
+
+#lhs {
+    float:left;
+    height: 600px;
+    width: 630px;
+}
+.multiples {
+    float: left;
+    height: 600px;
+    margin: 30px;
+    padding: 30px;
+}
 
 .d3-tip {
   line-height: 1;
@@ -119,8 +133,9 @@
 .country {
     fill: gainsboro;
 }
-.smallMultiples {
-    float: right;
+
+.countryName {
+    font: 12px sans-serif;
 }
 
 .overlay {
