--- a/spring-2015-msan622/final/mapStyle.css
+++ b/spring-2015-msan622/final/mapStyle.css
@@ -31,28 +31,18 @@ svg#map {
 }
 
 .infoLabel {   
-  position: absolute;
-  bottom: 15px;
-  left: 10px;
+  position: relative;
+  top: 0px;
+  left: 20px;
+  float: left;
   display: none;
-  border: solid #ccc 1px;
-  color: #666;
+  /*color: #666;*/
   background: #FFFFFF;    
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0px 0px 3px #66C2FF;
-  -moz-box-shadow: 0px 0px 3px #66C2FF;
-  box-shadow: 0px 0px 3px #66C2FF;
   text-align: left;            
   padding: 2px;      
-  font-size: 12px;
-  font-family: sans-serif; 
+  font-size: 16px;
+  font-weight: bold;
   pointer-events: none;       
-}
-
-.infoLabel span {
-  margin: 0px 5px;
 }
 
 .mapData {
