--- a/spring-2015-msan622/final/finalStyles.css
+++ b/spring-2015-msan622/final/finalStyles.css
@@ -54,95 +54,60 @@
     height: 600px;
 }
 
-#lhs {
+#top {
     float:left;
-    height: 600px;
-    width: 630px;
+    max-height: 380px;
+    width: 1000px;
+    overflow-y: hidden;
 }
+
 .multiples {
     float: left;
+    width: 1000px;
     height: 600px;
     margin: 30px;
     padding: 30px;
 }
 
-.d3-tip {
-  line-height: 1;
-  font-weight: bold;
-  padding: 12px;
-  background: rgba(44,123,182, 0.9);
-  color: #fff;
-  border-radius: 5px;
-}
-
-/* Creates a small triangle extender for the tooltip */
-.d3-tip:after {
-  box-sizing: border-box;
-  display: inline;
-  font-size: 10px;
-  width: 100%;
-  line-height: 1;
-  color: rgba(44,123,182, 0.9);
-  content: "\25B6";
-  position: absolute;
-  text-align: center;
-}
-.d3-tip.w:after {
-  content: "\25B6";
-  margin: -4px 0 0 -1px;
-  top: 50%;
-  left: 10px;
-  position: absolute;
-}
-
-
-.legend circle {
-  fill: none;
-  stroke: #ccc;
-}
-
-.legend text {
-  fill: #777;
-  font: 10px sans-serif;
-  text-anchor: middle;
-}
-
-.chart {
+#countryName {
+  position: relative;
   float: left;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-top:0;
-  padding-left:0;
+/*  top: 470px;
+  left: 500px;*/
 }
 
-.background path {
-  fill: none;
-  stroke: #ddd;
-  shape-rendering: crispEdges;
+#headline {
+  position: absolute;
+    float: left; 
+    margin: 0 auto;
+    display: block;
+    height: auto !important;
+    width: auto !important;
+    max-width: 600px;
+
+}
+#lines {
+    float: left; 
+    margin: 0 auto;
+    display: block;
+    height: auto !important;
+    width: auto !important;
+    max-width: 400px;
 }
 
-.foreground path {
-  fill: none;
-  stroke: steelblue;
-}
-
-.brush .extent {
-  fill-opacity: .3;
-  stroke: #fff;
-  shape-rendering: crispEdges;
-}
 .country {
     fill: gainsboro;
 }
 
-.countryName {
+.countryCode {
     font: 12px sans-serif;
 }
 
-#rHeader {
+#miniHeader {
   text-align: left; 
   font-size: 16px; 
   font-weight: bold;
+  display: block;
 }
 
 .overlay {
